# ethers-rs

ethers-contract/: Cargo.toml
ethers-contract/ethers-contract-abigen/: Cargo.toml
ethers-contract/ethers-contract-abigen/src/contract/: errors.rs  events.rs  methods.rs  structs.rs
ethers-contract/ethers-contract-clonable-default/: Cargo.toml
ethers-contract/ethers-contract-clonable-default/src/: lib.rs
ethers-contract/ethers-contract-derive/src/: clonable_default.rs  lib.rs
ethers-contract/src/: lib.rs
ethers-contract/tests/it/: abigen.rs
ethers-contract/tests/solidity-contracts/: LargeFixedArray.json
